@@ -2,22 +2,23 @@ package pl.rsi.cinema;
 
 import pl.rsi.cinema.dto.MovieFromServer;
 
-import java.net.http.*;
+import com.google.gson.JsonArray;
+import com.google.gson.JsonElement;
+import com.google.gson.JsonObject;
+import com.google.gson.JsonParser;
+
 import java.net.URI;
-import java.io.ByteArrayInputStream;
+import java.net.URLEncoder;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Base64;
 import java.util.List;
-import javax.xml.parsers.DocumentBuilder;
-import javax.xml.parsers.DocumentBuilderFactory;
-import org.w3c.dom.Document;
-import org.w3c.dom.Element;
-import org.w3c.dom.NodeList;
 
 public class CinemaServerService {
 
-    private static final String SERVER_URL = "https://nearest-crouch-liver.ngrok-free.dev/CinemaService.asmx";
+    private static final String SERVER_URL = "http://localhost:5000/api";
 
     private static CinemaServerService instance;
 
@@ -32,376 +33,132 @@ public class CinemaServerService {
     private boolean lastPosterWasMtom = false;
 
     public MovieDetails getMovieDetailsFromReservation(int reservationId) {
-
-        try {
-            String soap = "<?xml version=\"1.0\" encoding=\"utf-8\"?>" +
-                    "<soap:Envelope xmlns:soap=\"http://schemas.xmlsoap.org/soap/envelope/\">" +
-                    "<soap:Body>" +
-                    "<GetMovieDetailsFromReservation xmlns=\"http://tempuri.org/\">" +
-                    "<reservationId>" + reservationId + "</reservationId>" +
-                    "</GetMovieDetailsFromReservation>" +
-                    "</soap:Body>" +
-                    "</soap:Envelope>";
-
-            String xml = sendSoap("GetMovieDetailsFromReservation", soap);
-
-            DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();
-            factory.setNamespaceAware(true);
-
-            Document doc = factory.newDocumentBuilder()
-                    .parse(new ByteArrayInputStream(xml.getBytes("UTF-8")));
-
-            Element res = (Element) doc.getElementsByTagNameNS("*", "GetMovieDetailsFromReservationResult").item(0);
-
-            if (res == null)
-                return null;
-
-            // ACTORS parsing (jeśli są jak w GetMovieDetails)
-            StringBuilder actorsBuilder = new StringBuilder();
-            NodeList actors = doc.getElementsByTagNameNS("*", "string");
-
-            for (int i = 0; i < actors.getLength(); i++) {
-                if (i > 0)
-                    actorsBuilder.append("\n");
-                actorsBuilder.append(actors.item(i).getTextContent());
-            }
-
-            return new MovieDetails(
-                    getValue(res, "Title"),
-                    getValue(res, "Description"),
-                    getValue(res, "Director"),
-                    actorsBuilder.toString(),
-                    Integer.parseInt(getValue(res, "Duration")),
-                    getValue(res, "Premiere"),
-                    getValue(res, "Poster"));
-
-        } catch (Exception e) {
-            e.printStackTrace();
-            return null;
-        }
+        return null;
     }
 
     public boolean wasLastPosterMtom() {
         return lastPosterWasMtom;
     }
 
-    // ---------------------------
-    // SOAP REQUEST HELPER
-    // ---------------------------
-    private String sendSoap(String action, String body) throws Exception {
-
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(SERVER_URL))
-                .header("Content-Type", "text/xml; charset=utf-8")
-                .header("SOAPAction", "http://tempuri.org/" + action)
-                .POST(HttpRequest.BodyPublishers.ofString(body))
-                .build();
-
-        HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
-
-        if (response.statusCode() >= 200 && response.statusCode() < 300) {
-            return response.body();
-        }
-
-        throw new RuntimeException("SOAP error: " + response.statusCode() + "\n" + response.body());
-    }
-
-    // ---------------------------
-    // PARSER HELPER
-    // ---------------------------
-
-    private String getValue(Element e, String tag) {
-        NodeList list = e.getElementsByTagNameNS("*", tag);
-
-        if (list.getLength() == 0 || list.item(0) == null)
-            return null;
-
-        return list.item(0).getTextContent();
-    }
-
-    // =========================================================
-    // 🔌 SERVER STATUS
-    // =========================================================
     public boolean isServerReachable() {
         try {
-            HttpRequest request = HttpRequest.newBuilder()
-                    .uri(URI.create(SERVER_URL))
-                    .header("Content-Type", "text/xml; charset=utf-8")
-                    .header("SOAPAction", "http://tempuri.org/GetMovies")
-                    .POST(HttpRequest.BodyPublishers.ofString(
-                            "<?xml version=\"1.0\" encoding=\"utf-8\"?>" +
-                                    "<soap:Envelope xmlns:soap=\"http://schemas.xmlsoap.org/soap/envelope/\">" +
-                                    "<soap:Body><GetMovies xmlns=\"http://tempuri.org/\" /></soap:Body>" +
-                                    "</soap:Envelope>"))
-                    .timeout(java.time.Duration.ofSeconds(5))
-                    .build();
-            HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
-            return response.statusCode() >= 200 && response.statusCode() < 300;
+            String body = sendJsonGet("/movies");
+            return body != null && !body.isBlank();
         } catch (Exception e) {
             return false;
         }
     }
 
-    // =========================================================
-    // 🎬 MOVIES LIST
-    // =========================================================
     public List<MovieFromServer> getMovies() {
-
         try {
-            String soap = "<?xml version=\"1.0\" encoding=\"utf-8\"?>" +
-                    "<soap:Envelope xmlns:soap=\"http://schemas.xmlsoap.org/soap/envelope/\">" +
-                    "<soap:Body>" +
-                    "<GetMovies xmlns=\"http://tempuri.org/\" />" +
-                    "</soap:Body>" +
-                    "</soap:Envelope>";
+            String body = sendJsonGet("/movies");
+            JsonArray array = JsonParser.parseString(body).getAsJsonArray();
 
-            String xml = sendSoap("GetMovies", soap);
-
-            DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();
-            factory.setNamespaceAware(true);
-
-            DocumentBuilder builder = factory.newDocumentBuilder();
-            Document doc = builder.parse(new ByteArrayInputStream(xml.getBytes("UTF-8")));
-
-            NodeList moviesNodes = doc.getElementsByTagName("d4p1:MovieDto");
             List<MovieFromServer> list = new ArrayList<>();
-
-            for (int i = 0; i < moviesNodes.getLength(); i++) {
-
-                Element e = (Element) moviesNodes.item(i);
-
-                String showIdStr = getValue(e, "ShowId");
-
-                if (showIdStr == null)
-                    continue;
-
-                int movieId = Integer.parseInt(getValue(e, "MovieId"));
-                int showId = Integer.parseInt(getValue(e, "ShowId"));
-
-                String title = getValue(e, "Title");
-                String genre = getValue(e, "Genre");
-                String date = getValue(e, "ShowDatetime");
-
-                // MovieId NIE MA w tym endpointcie
-                list.add(new MovieFromServer(showId, movieId, title, genre, date));
+            for (JsonElement element : array) {
+                JsonObject movie = element.getAsJsonObject();
+                int movieId = getInt(movie, "movieId");
+                int showId = getInt(movie, "showId");
+                String title = getString(movie, "title");
+                String genre = getString(movie, "genre");
+                String showDateTime = getString(movie, "showDatetime");
+                list.add(new MovieFromServer(showId, movieId, title, genre, showDateTime));
             }
-
             return list;
-
         } catch (Exception e) {
-            e.printStackTrace();
             throw new RuntimeException("getMovies failed: " + e.getMessage(), e);
         }
     }
 
-    // =========================================================
-    // 🎬 MOVIE DETAILS (NAJWAŻNIEJSZE)
-    // =========================================================
     public MovieDetails getMovieDetails(int movieId) {
         try {
-            // Przygotowanie żądania SOAP
-            String soap = "<?xml version=\"1.0\" encoding=\"utf-8\"?>" +
-                    "<soap:Envelope xmlns:soap=\"http://schemas.xmlsoap.org/soap/envelope/\">" +
-                    "<soap:Body>" +
-                    "<GetMovieDetails xmlns=\"http://tempuri.org/\">" +
-                    "<movieId>" + movieId + "</movieId>" +
-                    "</GetMovieDetails>" +
-                    "</soap:Body>" +
-                    "</soap:Envelope>";
+            String body = sendJsonGet("/movies/" + movieId);
+            JsonObject movie = JsonParser.parseString(body).getAsJsonObject();
 
-            // Wysłanie zapytania i odebranie XML
-            String xml = sendSoap("GetMovieDetails", soap);
-
-            // Parsowanie dokumentu XML
-            DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();
-            factory.setNamespaceAware(true);
-            Document doc = factory.newDocumentBuilder().parse(new ByteArrayInputStream(xml.getBytes("UTF-8")));
-
-            // --- SEKCJA: AKTORZY (FORMATOWANIE PIONOWE) ---
-            StringBuilder actorsBuilder = new StringBuilder();
-            NodeList actorsContainer = doc.getElementsByTagNameNS("*", "Actors");
-
-            if (actorsContainer.getLength() > 0) {
-                Element container = (Element) actorsContainer.item(0);
-                // Wyciągamy wszystkie napisy z tagów <string>
-                NodeList stringNodes = container.getElementsByTagNameNS("*", "string");
-
-                for (int i = 0; i < stringNodes.getLength(); i++) {
-                    String actorName = stringNodes.item(i).getTextContent();
-                    if (actorName != null && !actorName.trim().isEmpty()) {
-                        // Jeśli to nie pierwszy element, dodaj enter przed kolejnym
-                        if (actorsBuilder.length() > 0) {
-                            actorsBuilder.append("\n");
-                        }
-                        actorsBuilder.append(actorName.trim());
+            String actors = "";
+            JsonElement actorsElement = movie.get("actors");
+            if (actorsElement != null && actorsElement.isJsonArray()) {
+                JsonArray actorsArray = actorsElement.getAsJsonArray();
+                List<String> actorNames = new ArrayList<>();
+                for (JsonElement element : actorsArray) {
+                    String actorName = element.getAsString();
+                    if (actorName != null && !actorName.isBlank()) {
+                        actorNames.add(actorName);
                     }
                 }
+                actors = String.join("\n", actorNames);
             }
 
-            String finalActors = actorsBuilder.toString();
-
-            // --- SEKCJA: GŁÓWNE DANE O FILMIE ---
-            // Szukamy kontenera z wynikiem (GetMovieDetailsResult)
-            Element res = (Element) doc.getElementsByTagNameNS("*", "GetMovieDetailsResult").item(0);
-
-            if (res == null) {
-                return null;
-            }
-
-            // Zwracamy nowy obiekt ze wszystkimi danymi
             return new MovieDetails(
-                    getValue(res, "Title"),
-                    getValue(res, "Description"),
-                    getValue(res, "Director"),
-                    finalActors,
-                    Integer.parseInt(getValue(res, "Duration")),
-                    getValue(res, "Premiere"),
-                    getValue(res, "Poster"));
-
+                    getString(movie, "title"),
+                    getString(movie, "description"),
+                    getString(movie, "director"),
+                    actors,
+                    getInt(movie, "duration"),
+                    String.valueOf(getInt(movie, "premiere")),
+                    getString(movie, "poster")
+            );
         } catch (Exception e) {
-            System.err.println("Błąd podczas przetwarzania szczegółów filmu (ID: " + movieId + "):");
-            e.printStackTrace();
-            return null;
+            throw new RuntimeException("getMovieDetails failed: " + e.getMessage(), e);
         }
     }
 
-    // =========================================================
-    // 🖼 MOVIE POSTER (MTOM)
-    // =========================================================
     public byte[] getMoviePoster(int movieId) {
         try {
-            String soap = "<?xml version=\"1.0\" encoding=\"utf-8\"?>" +
-                    "<soap:Envelope xmlns:soap=\"http://schemas.xmlsoap.org/soap/envelope/\">" +
-                    "<soap:Body>" +
-                    "<GetMoviePoster xmlns=\"http://tempuri.org/\">" +
-                    "<movieId>" + movieId + "</movieId>" +
-                    "</GetMoviePoster>" +
-                    "</soap:Body>" +
-                    "</soap:Envelope>";
-
             HttpRequest request = HttpRequest.newBuilder()
-                    .uri(URI.create(SERVER_URL))
-                    .header("Content-Type", "text/xml; charset=utf-8")
-                    .header("SOAPAction", "http://tempuri.org/GetMoviePoster")
-                    .POST(HttpRequest.BodyPublishers.ofString(soap))
+                    .uri(URI.create(buildUrl("/movies/" + movieId + "/poster")))
+                    .header("Accept", "image/jpeg")
+                    .GET()
                     .build();
 
             HttpResponse<byte[]> response = httpClient.send(request, HttpResponse.BodyHandlers.ofByteArray());
-
             if (response.statusCode() < 200 || response.statusCode() >= 300) {
                 throw new RuntimeException("HTTP error: " + response.statusCode());
             }
-
-            String contentType = response.headers().firstValue("Content-Type").orElse("");
-            if (contentType.contains("multipart/related")) {
-                lastPosterWasMtom = true;
-                return extractMtomBinaryPart(response.body(), contentType);
-            } else {
-                lastPosterWasMtom = false;
-                // Fallback: Base64 in regular XML response
-                String xml = new String(response.body(), "UTF-8");
-                DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();
-                factory.setNamespaceAware(true);
-                Document doc = factory.newDocumentBuilder().parse(new ByteArrayInputStream(xml.getBytes("UTF-8")));
-                Element result = (Element) doc.getElementsByTagNameNS("*", "GetMoviePosterResult").item(0);
-                if (result == null)
-                    return null;
-                return Base64.getDecoder().decode(result.getTextContent().trim());
-            }
+            lastPosterWasMtom = false;
+            return response.body();
         } catch (Exception e) {
-            e.printStackTrace();
-            return null;
+            throw new RuntimeException("getMoviePoster failed: " + e.getMessage(), e);
         }
     }
 
-    private byte[] extractMtomBinaryPart(byte[] body, String contentType) throws Exception {
-        String boundary = null;
-        for (String param : contentType.split(";")) {
-            param = param.trim();
-            if (param.startsWith("boundary=")) {
-                boundary = param.substring(9).replace("\"", "").trim();
+    public int getMovieId(int filmShowId) {
+        try {
+            for (MovieFromServer movie : getMovies()) {
+                if (movie.getFilmShowId() == filmShowId) {
+                    return movie.getMovieId();
+                }
             }
+        } catch (Exception ignored) {
+            // fallback to zero if the server is unavailable
         }
-        if (boundary == null)
-            throw new RuntimeException("No MIME boundary in Content-Type");
-
-        byte[] delimiter = ("\r\n--" + boundary).getBytes("UTF-8");
-        byte[] firstDelimiter = ("--" + boundary).getBytes("UTF-8");
-
-        List<byte[]> parts = new ArrayList<>();
-        int start = indexOfBytes(body, firstDelimiter, 0);
-        if (start == -1)
-            throw new RuntimeException("MIME boundary not found in response body");
-        start += firstDelimiter.length;
-
-        while (start < body.length) {
-            if (start + 1 < body.length && body[start] == '\r' && body[start + 1] == '\n')
-                start += 2;
-            else if (start < body.length && body[start] == '\n')
-                start += 1;
-
-            int end = indexOfBytes(body, delimiter, start);
-            if (end == -1)
-                break;
-            parts.add(Arrays.copyOfRange(body, start, end));
-            start = end + delimiter.length;
-            if (start + 1 < body.length && body[start] == '-' && body[start + 1] == '-')
-                break;
-        }
-
-        for (byte[] part : parts) {
-            int headerEnd = indexOfCrLfCrLf(part);
-            if (headerEnd == -1)
-                continue;
-            String headers = new String(part, 0, headerEnd, "UTF-8");
-            if (!headers.contains("application/xop+xml") && !headers.contains("text/xml")) {
-                int dataStart = headerEnd + 4;
-                return Arrays.copyOfRange(part, dataStart, part.length);
-            }
-        }
-        throw new RuntimeException("No binary attachment found in MTOM response");
+        return 0;
     }
-
-    private int indexOfBytes(byte[] source, byte[] target, int fromIndex) {
-        outer: for (int i = fromIndex; i <= source.length - target.length; i++) {
-            for (int j = 0; j < target.length; j++) {
-                if (source[i + j] != target[j])
-                    continue outer;
-            }
-            return i;
-        }
-        return -1;
-    }
-
-    private int indexOfCrLfCrLf(byte[] data) {
-        for (int i = 0; i < data.length - 3; i++) {
-            if (data[i] == '\r' && data[i + 1] == '\n' && data[i + 2] == '\r' && data[i + 3] == '\n') {
-                return i;
-            }
-        }
-        return -1;
-    }
-
-    // =========================================================
-    // DTOs
-    // =========================================================
 
     public static class MovieDetails {
         private final String title;
         private final String description;
         private final String director;
         private final String actors;
+        private final String genre;
         private final int duration;
         private final String premiere;
         private final String posterBase64;
 
         public MovieDetails(String title, String description, String director,
-                String actors, int duration,
-                String premiere, String posterBase64) {
+                            String actors, int duration,
+                            String premiere, String posterBase64) {
+            this(title, description, director, actors, "", duration, premiere, posterBase64);
+        }
+
+        public MovieDetails(String title, String description, String director,
+                            String actors, String genre, int duration,
+                            String premiere, String posterBase64) {
             this.title = title;
             this.description = description;
             this.director = director;
             this.actors = actors;
+            this.genre = genre;
             this.duration = duration;
             this.premiere = premiere;
             this.posterBase64 = posterBase64;
@@ -423,6 +180,10 @@ public class CinemaServerService {
             return actors;
         }
 
+        public String getGenre() {
+            return genre;
+        }
+
         public int getDuration() {
             return duration;
         }
@@ -438,212 +199,183 @@ public class CinemaServerService {
 
     public List<ShowtimeDto> getShowtimes(int movieId, String date) {
         try {
-
-            String formatted = normalizeDateForSoap(date);
-
-            String soap = "<?xml version=\"1.0\" encoding=\"utf-8\"?>" +
-                    "<soap:Envelope xmlns:soap=\"http://schemas.xmlsoap.org/soap/envelope/\">" +
-                    "<soap:Body>" +
-                    "<GetShowtimes xmlns=\"http://tempuri.org/\">" +
-                    "<movieId>" + movieId + "</movieId>" +
-                    "<date>" + formatted + "</date>" +
-                    "</GetShowtimes>" +
-                    "</soap:Body>" +
-                    "</soap:Envelope>";
-
-            String xml = sendSoap("GetShowtimes", soap);
-
-            DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();
-            factory.setNamespaceAware(true);
-
-            Document doc = factory.newDocumentBuilder()
-                    .parse(new ByteArrayInputStream(xml.getBytes("UTF-8")));
-
-            NodeList nodes = doc.getElementsByTagNameNS("*", "ShowtimeDto");
+            String formatted = normalizeDateForRest(date);
+            String path = "/movies/" + movieId + "/showtimes?date=" + URLEncoder.encode(formatted, StandardCharsets.UTF_8);
+            String body = sendJsonGet(path);
+            JsonArray array = JsonParser.parseString(body).getAsJsonArray();
 
             List<ShowtimeDto> list = new ArrayList<>();
-
-            for (int i = 0; i < nodes.getLength(); i++) {
-
-                Element e = (Element) nodes.item(i);
-
-                int id = Integer.parseInt(getValue(e, "FilmShowId"));
-                String dt = getValue(e, "ShowDatetime");
-                String screenIdStr = getValue(e, "ScreenId");
-                int screenId = (screenIdStr != null) ? Integer.parseInt(screenIdStr) : 0;
-
+            for (JsonElement element : array) {
+                JsonObject showtime = element.getAsJsonObject();
+                int id = getInt(showtime, "filmShowId");
+                String dt = getString(showtime, "showDatetime");
+                int screenId = getInt(showtime, "screenId");
                 list.add(new ShowtimeDto(id, dt, screenId));
             }
-
             return list;
-
         } catch (Exception e) {
-            e.printStackTrace();
-            return new ArrayList<>();
+            throw new RuntimeException("getShowtimes failed: " + e.getMessage(), e);
         }
     }
 
-    private String normalizeDateForSoap(String date) {
-        if (date == null || date.isBlank()) {
-            throw new IllegalArgumentException("Date is empty");
+    public List<SeatDto> getSeats(int filmShowId) {
+        try {
+            String body = sendJsonGet("/showtimes/" + filmShowId + "/seats");
+            JsonArray array = JsonParser.parseString(body).getAsJsonArray();
+
+            List<SeatDto> list = new ArrayList<>();
+            for (JsonElement element : array) {
+                JsonObject seat = element.getAsJsonObject();
+                int seatId = getInt(seat, "seatId");
+                int number = getInt(seat, "number");
+                int row = getInt(seat, "rowNum");
+                boolean taken = getBoolean(seat, "isTaken");
+                list.add(new SeatDto(seatId, number, row, taken));
+            }
+            return list;
+        } catch (Exception e) {
+            throw new RuntimeException("getSeats failed: " + e.getMessage(), e);
         }
-
-        String trimmed = date.trim();
-
-        if (trimmed.matches("\\d{4}-\\d{2}-\\d{2}")) {
-            return trimmed;
-        }
-
-        String[] parts = trimmed.split("\\.");
-        if (parts.length == 3) {
-            return parts[2] + "-" + parts[1] + "-" + parts[0];
-        }
-
-        throw new IllegalArgumentException("Unsupported date format: " + date);
     }
 
-    // =========================================================
-    // 🔐 AUTH: LOGIN
-    // =========================================================
     public UserLoginDto login(String email, String password) {
         try {
-            String soap = "<?xml version=\"1.0\" encoding=\"utf-8\"?>" +
-                    "<soap:Envelope xmlns:soap=\"http://schemas.xmlsoap.org/soap/envelope/\">" +
-                    "<soap:Body>" +
-                    "<Login xmlns=\"http://tempuri.org/\">" +
-                    "<email>" + escapeXml(email) + "</email>" +
-                    "<password>" + escapeXml(password) + "</password>" +
-                    "</Login>" +
-                    "</soap:Body>" +
-                    "</soap:Envelope>";
+            JsonObject payload = new JsonObject();
+            payload.addProperty("email", email);
+            payload.addProperty("password", password);
 
-            String xml = sendSoap("Login", soap);
-
-            DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();
-            factory.setNamespaceAware(true);
-            Document doc = factory.newDocumentBuilder().parse(new ByteArrayInputStream(xml.getBytes("UTF-8")));
-
-            Element result = (Element) doc.getElementsByTagNameNS("*", "LoginResult").item(0);
-            if (result == null)
-                return null;
-
-            String userIdStr = getValue(result, "UserId");
-            int userId = (userIdStr != null && !userIdStr.isBlank()) ? Integer.parseInt(userIdStr) : 0;
-
+            String body = sendJsonPost("/auth/login", payload.toString());
+            JsonObject object = JsonParser.parseString(body).getAsJsonObject();
             return new UserLoginDto(
-                    userId,
-                    getValue(result, "Email"),
-                    getValue(result, "UserName"),
-                    getValue(result, "ErrorMessage"));
-
+                    getInt(object, "userId"),
+                    getString(object, "email"),
+                    getString(object, "userName"),
+                    getString(object, "errorMessage")
+            );
         } catch (Exception e) {
-            e.printStackTrace();
-            return null;
+            throw new RuntimeException("login failed: " + e.getMessage(), e);
         }
     }
 
-    // =========================================================
-    // 🔐 AUTH: REGISTER
-    // =========================================================
     public RegisterResultDto register(String name, String surname, String email, String password,
-            String confirmPassword) {
+                                      String confirmPassword) {
         try {
-            String soap = "<?xml version=\"1.0\" encoding=\"utf-8\"?>" +
-                    "<soap:Envelope xmlns:soap=\"http://schemas.xmlsoap.org/soap/envelope/\">" +
-                    "<soap:Body>" +
-                    "<Register xmlns=\"http://tempuri.org/\">" +
-                    "<name>" + escapeXml(name) + "</name>" +
-                    "<surname>" + escapeXml(surname) + "</surname>" +
-                    "<email>" + escapeXml(email) + "</email>" +
-                    "<password>" + escapeXml(password) + "</password>" +
-                    "<confirmPassword>" + escapeXml(confirmPassword) + "</confirmPassword>" +
-                    "</Register>" +
-                    "</soap:Body>" +
-                    "</soap:Envelope>";
+            JsonObject payload = new JsonObject();
+            payload.addProperty("name", name);
+            payload.addProperty("surname", surname);
+            payload.addProperty("email", email);
+            payload.addProperty("password", password);
+            payload.addProperty("confirmPassword", confirmPassword);
 
-            String xml = sendSoap("Register", soap);
-
-            DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();
-            factory.setNamespaceAware(true);
-            Document doc = factory.newDocumentBuilder().parse(new ByteArrayInputStream(xml.getBytes("UTF-8")));
-
-            Element result = (Element) doc.getElementsByTagNameNS("*", "RegisterResult").item(0);
-            if (result == null)
-                return null;
-
-            String userIdStr = getValue(result, "UserId");
-            int userId = (userIdStr != null && !userIdStr.isBlank()) ? Integer.parseInt(userIdStr) : 0;
-
+            String body = sendJsonPost("/auth/register", payload.toString());
+            JsonObject object = JsonParser.parseString(body).getAsJsonObject();
             return new RegisterResultDto(
-                    userId,
-                    getValue(result, "Email"),
-                    getValue(result, "Name"),
-                    getValue(result, "Surname"),
-                    getValue(result, "ErrorMessage"));
-
+                    getInt(object, "userId"),
+                    getString(object, "email"),
+                    getString(object, "name"),
+                    getString(object, "surname"),
+                    getString(object, "errorMessage")
+            );
         } catch (Exception e) {
-            e.printStackTrace();
-            return null;
+            throw new RuntimeException("register failed: " + e.getMessage(), e);
         }
     }
-
-    // =========================================================
-    // 📋 RESERVATIONS
-    // =========================================================
 
     public List<UserReservationDto> getUserReservations(int userId) {
         try {
-            String soap = "<?xml version=\"1.0\" encoding=\"utf-8\"?>" +
-                    "<soap:Envelope xmlns:soap=\"http://schemas.xmlsoap.org/soap/envelope/\">" +
-                    "<soap:Body>" +
-                    "<GetUserReservations xmlns=\"http://tempuri.org/\">" +
-                    "<userId>" + userId + "</userId>" +
-                    "</GetUserReservations>" +
-                    "</soap:Body>" +
-                    "</soap:Envelope>";
-
-            String xml = sendSoap("GetUserReservations", soap);
-
-            DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();
-            factory.setNamespaceAware(true);
-
-            Document doc = factory.newDocumentBuilder()
-                    .parse(new ByteArrayInputStream(xml.getBytes("UTF-8")));
-
-            NodeList nodes = doc.getElementsByTagNameNS("*", "ReservationDto");
+            String body = sendJsonGet("/users/" + userId + "/reservations");
+            JsonArray array = JsonParser.parseString(body).getAsJsonArray();
 
             List<UserReservationDto> list = new ArrayList<>();
+            for (JsonElement element : array) {
+                JsonObject reservation = element.getAsJsonObject();
+                int reservationId = getInt(reservation, "reservationId");
+                String title = getString(reservation, "title");
+                String showDatetime = getString(reservation, "showDatetime");
+                int filmShowId = getInt(reservation, "filmShowId");
 
-            for (int i = 0; i < nodes.getLength(); i++) {
-                Element e = (Element) nodes.item(i);
-
-                int reservationId = Integer.parseInt(getValue(e, "ReservationId"));
-                String title = getValue(e, "Title");
-                String showDatetime = getValue(e, "ShowDatetime");
-
-                // 🔥 SEATS (lista <string>)
-                NodeList seatsNodes = e.getElementsByTagNameNS("*", "string");
-                int filmShowId = Integer.parseInt(getValue(e, "FilmShowId"));
                 StringBuilder seatsBuilder = new StringBuilder();
-                for (int j = 0; j < seatsNodes.getLength(); j++) {
-                    if (j > 0)
-                        seatsBuilder.append(", ");
-                    seatsBuilder.append(seatsNodes.item(j).getTextContent());
+                JsonElement seatsElement = reservation.get("takenSeats");
+                if (seatsElement != null && seatsElement.isJsonArray()) {
+                    JsonArray seatsArray = seatsElement.getAsJsonArray();
+                    for (int i = 0; i < seatsArray.size(); i++) {
+                        if (i > 0) {
+                            seatsBuilder.append(", ");
+                        }
+                        seatsBuilder.append(seatsArray.get(i).getAsString());
+                    }
                 }
 
-                list.add(new UserReservationDto(
-                        reservationId,
-                        title,
-                        showDatetime,
-                        filmShowId,
-                        seatsBuilder.toString()));
+                list.add(new UserReservationDto(reservationId, title, showDatetime, filmShowId, seatsBuilder.toString()));
             }
-
             return list;
-
         } catch (Exception e) {
-            e.printStackTrace();
-            return new ArrayList<>();
+            throw new RuntimeException("getUserReservations failed: " + e.getMessage(), e);
+        }
+    }
+
+    public ReservationCreateResultDto createReservation(int userId, int filmShowId, List<Integer> seatIds) {
+        try {
+            JsonObject payload = new JsonObject();
+            payload.addProperty("filmShowId", filmShowId);
+            JsonArray seatsArray = new JsonArray();
+            for (Integer seatId : seatIds) {
+                seatsArray.add(seatId);
+            }
+            payload.add("selectedSeats", seatsArray);
+
+            String body = sendJsonPost("/users/" + userId + "/reservations", payload.toString());
+            JsonObject object = JsonParser.parseString(body).getAsJsonObject();
+            int reservationId = getInt(object, "reservationId");
+            List<String> seatKeys = new ArrayList<>();
+            for (Integer seatId : seatIds) {
+                seatKeys.add(String.valueOf(seatId));
+            }
+            return new ReservationCreateResultDto(reservationId, seatKeys);
+        } catch (Exception e) {
+            throw new RuntimeException("createReservation failed: " + e.getMessage(), e);
+        }
+    }
+
+    public boolean deleteReservation(int userId, int reservationId) {
+        try {
+            sendJsonDelete("/users/" + userId + "/reservations/" + reservationId);
+            return true;
+        } catch (Exception e) {
+            throw new RuntimeException("deleteReservation failed: " + e.getMessage(), e);
+        }
+    }
+
+    public boolean updateReservation(int userId, int reservationId, int newFilmShowId, List<Integer> newSeatIds) {
+        try {
+            JsonObject payload = new JsonObject();
+            payload.addProperty("newFilmShowId", newFilmShowId);
+            JsonArray seatsArray = new JsonArray();
+            for (Integer seatId : newSeatIds) {
+                seatsArray.add(seatId);
+            }
+            payload.add("newSeats", seatsArray);
+
+            sendJsonPut("/users/" + userId + "/reservations/" + reservationId, payload.toString());
+            return true;
+        } catch (Exception e) {
+            throw new RuntimeException("updateReservation failed: " + e.getMessage(), e);
+        }
+    }
+
+    public byte[] getReservationPdf(int reservationId) {
+        try {
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create(buildUrl("/reservations/" + reservationId + "/pdf")))
+                    .GET()
+                    .build();
+            HttpResponse<byte[]> response = httpClient.send(request, HttpResponse.BodyHandlers.ofByteArray());
+            if (response.statusCode() < 200 || response.statusCode() >= 300) {
+                throw new RuntimeException("PDF error: " + response.statusCode());
+            }
+            return response.body();
+        } catch (Exception e) {
+            throw new RuntimeException("getReservationPdf failed: " + e.getMessage(), e);
         }
     }
 
@@ -651,11 +383,11 @@ public class CinemaServerService {
         private final int reservationId;
         private final String title;
         private final String showDatetime;
-        private final int filmShowId; // 🔥 NOWE
+        private final int filmShowId;
         private final String seats;
 
         public UserReservationDto(int reservationId, String title,
-                String showDatetime, int filmShowId, String seats) {
+                                  String showDatetime, int filmShowId, String seats) {
             this.reservationId = reservationId;
             this.title = title;
             this.showDatetime = showDatetime;
@@ -684,107 +416,6 @@ public class CinemaServerService {
         }
     }
 
-    public ReservationCreateResultDto createReservation(int userId, int filmShowId, List<Integer> seatIds) {
-        try {
-            StringBuilder seatsXml = new StringBuilder(
-                    "<seats xmlns:d4p1=\"http://schemas.microsoft.com/2003/10/Serialization/Arrays\">");
-            for (int id : seatIds) {
-                seatsXml.append("<d4p1:int>").append(id).append("</d4p1:int>");
-            }
-            seatsXml.append("</seats>");
-
-            String soap = "<?xml version=\"1.0\" encoding=\"utf-8\"?>" +
-                    "<soap:Envelope xmlns:soap=\"http://schemas.xmlsoap.org/soap/envelope/\">" +
-                    "<soap:Body>" +
-                    "<CreateReservation xmlns=\"http://tempuri.org/\">" +
-                    "<userId>" + userId + "</userId>" +
-                    "<filmshowId>" + filmShowId + "</filmshowId>" +
-                    seatsXml +
-                    "</CreateReservation>" +
-                    "</soap:Body>" +
-                    "</soap:Envelope>";
-
-            String xml = sendSoap("CreateReservation", soap);
-
-            DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();
-            factory.setNamespaceAware(true);
-            Document doc = factory.newDocumentBuilder().parse(new ByteArrayInputStream(xml.getBytes("UTF-8")));
-
-            Element result = (Element) doc.getElementsByTagNameNS("*", "CreateReservationResult").item(0);
-            if (result == null)
-                return null;
-
-            String idStr = getValue(result, "ReservationId");
-            int reservationId = (idStr != null && !idStr.isBlank()) ? Integer.parseInt(idStr) : 0;
-            List<String> seatKeys = new ArrayList<>();
-            for (int id : seatIds) {
-                seatKeys.add(String.valueOf(id));
-            }
-            return new ReservationCreateResultDto(reservationId, seatKeys);
-        } catch (Exception e) {
-            e.printStackTrace();
-            return null;
-        }
-    }
-
-    public boolean deleteReservation(int userId, int reservationId) {
-        try {
-            String soap = "<?xml version=\"1.0\" encoding=\"utf-8\"?>" +
-                    "<soap:Envelope xmlns:soap=\"http://schemas.xmlsoap.org/soap/envelope/\">" +
-                    "<soap:Body>" +
-                    "<ReservationDelete xmlns=\"http://tempuri.org/\">" +
-                    "<userId>" + userId + "</userId>" +
-                    "<reservationId>" + reservationId + "</reservationId>" +
-                    "</ReservationDelete>" +
-                    "</soap:Body>" +
-                    "</soap:Envelope>";
-
-            String xml = sendSoap("ReservationDelete", soap);
-
-            DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();
-            factory.setNamespaceAware(true);
-            Document doc = factory.newDocumentBuilder().parse(new ByteArrayInputStream(xml.getBytes("UTF-8")));
-
-            Element result = (Element) doc.getElementsByTagNameNS("*", "ReservationDeleteResult").item(0);
-            if (result == null)
-                return false;
-
-            return Boolean.parseBoolean(result.getTextContent().trim());
-        } catch (Exception e) {
-            e.printStackTrace();
-            return false;
-        }
-    }
-
-    public boolean updateReservation(int userId, int reservationId, int newFilmShowId, List<Integer> newSeatIds) {
-        try {
-            StringBuilder seatsXml = new StringBuilder(
-                    "<newseats xmlns:d4p1=\"http://schemas.microsoft.com/2003/10/Serialization/Arrays\">");
-            for (int id : newSeatIds) {
-                seatsXml.append("<d4p1:int>").append(id).append("</d4p1:int>");
-            }
-            seatsXml.append("</newseats>");
-
-            String soap = "<?xml version=\"1.0\" encoding=\"utf-8\"?>" +
-                    "<soap:Envelope xmlns:soap=\"http://schemas.xmlsoap.org/soap/envelope/\">" +
-                    "<soap:Body>" +
-                    "<UpdateReservation xmlns=\"http://tempuri.org/\">" +
-                    "<userId>" + userId + "</userId>" +
-                    "<reservationId>" + reservationId + "</reservationId>" +
-                    "<newshowId>" + newFilmShowId + "</newshowId>" +
-                    seatsXml +
-                    "</UpdateReservation>" +
-                    "</soap:Body>" +
-                    "</soap:Envelope>";
-
-            String xml = sendSoap("UpdateReservation", soap);
-            return xml != null;
-        } catch (Exception e) {
-            e.printStackTrace();
-            return false;
-        }
-    }
-
     public class ReservationCreateResultDto {
         private int reservationId;
         private List<String> seatKeys;
@@ -803,16 +434,167 @@ public class CinemaServerService {
         }
     }
 
-    private String escapeXml(String value) {
-        if (value == null)
-            return "";
-        return value.replace("&", "&amp;").replace("<", "&lt;").replace(">", "&gt;")
-                .replace("\"", "&quot;").replace("'", "&apos;");
+    private String sendJsonGet(String path) throws Exception {
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(URI.create(buildUrl(path)))
+                .header("Accept", "application/json")
+                .GET()
+                .build();
+        HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString(StandardCharsets.UTF_8));
+        if (response.statusCode() < 200 || response.statusCode() >= 300) {
+            throw new RuntimeException("REST error: " + response.statusCode() + " " + response.body());
+        }
+        return response.body();
     }
 
-    // =========================================================
-    // DTOs: AUTH
-    // =========================================================
+    private String sendJsonPost(String path, String body) throws Exception {
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(URI.create(buildUrl(path)))
+                .header("Content-Type", "application/json")
+                .header("Accept", "application/json")
+                .POST(HttpRequest.BodyPublishers.ofString(body, StandardCharsets.UTF_8))
+                .build();
+        HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString(StandardCharsets.UTF_8));
+        if (response.statusCode() < 200 || response.statusCode() >= 300) {
+            throw new RuntimeException("REST error: " + response.statusCode() + " " + response.body());
+        }
+        return response.body();
+    }
+
+    private String sendJsonPut(String path, String body) throws Exception {
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(URI.create(buildUrl(path)))
+                .header("Content-Type", "application/json")
+                .header("Accept", "application/json")
+                .PUT(HttpRequest.BodyPublishers.ofString(body, StandardCharsets.UTF_8))
+                .build();
+        HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString(StandardCharsets.UTF_8));
+        if (response.statusCode() < 200 || response.statusCode() >= 300) {
+            throw new RuntimeException("REST error: " + response.statusCode() + " " + response.body());
+        }
+        return response.body();
+    }
+
+    private String sendJsonDelete(String path) throws Exception {
+        HttpRequest request = HttpRequest.newBuilder()
+                .uri(URI.create(buildUrl(path)))
+                .header("Accept", "application/json")
+                .DELETE()
+                .build();
+        HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString(StandardCharsets.UTF_8));
+        if (response.statusCode() < 200 || response.statusCode() >= 300) {
+            throw new RuntimeException("REST error: " + response.statusCode() + " " + response.body());
+        }
+        return response.body();
+    }
+
+    private String buildUrl(String path) {
+        String base = System.getProperty("cinema.server.url", SERVER_URL);
+        if (base.endsWith("/")) {
+            base = base.substring(0, base.length() - 1);
+        }
+        if (path.startsWith("/")) {
+            return base + path;
+        }
+        return base + "/" + path;
+    }
+
+    private String normalizeDateForRest(String date) {
+        if (date == null || date.isBlank()) {
+            throw new IllegalArgumentException("Date is empty");
+        }
+
+        String trimmed = date.trim();
+        if (trimmed.matches("\\d{4}-\\d{2}-\\d{2}")) {
+            return trimmed;
+        }
+
+        String[] parts = trimmed.split("\\.");
+        if (parts.length == 3) {
+            return parts[2] + "-" + parts[1] + "-" + parts[0];
+        }
+
+        throw new IllegalArgumentException("Unsupported date format: " + date);
+    }
+
+    private int getInt(JsonObject object, String name) {
+        JsonElement element = object.get(name);
+        if (element == null || element.isJsonNull()) {
+            return 0;
+        }
+        return element.getAsInt();
+    }
+
+    private String getString(JsonObject object, String name) {
+        JsonElement element = object.get(name);
+        if (element == null || element.isJsonNull()) {
+            return null;
+        }
+        return element.getAsString();
+    }
+
+    private boolean getBoolean(JsonObject object, String name) {
+        JsonElement element = object.get(name);
+        if (element == null || element.isJsonNull()) {
+            return false;
+        }
+        return element.getAsBoolean();
+    }
+
+    public static class ShowtimeDto {
+        private final int filmShowId;
+        private final String showDatetime;
+        private final int screenId;
+
+        public ShowtimeDto(int filmShowId, String showDatetime, int screenId) {
+            this.filmShowId = filmShowId;
+            this.showDatetime = showDatetime;
+            this.screenId = screenId;
+        }
+
+        public int getFilmShowId() {
+            return filmShowId;
+        }
+
+        public String getShowDatetime() {
+            return showDatetime;
+        }
+
+        public int getScreenId() {
+            return screenId;
+        }
+    }
+
+    public static class SeatDto {
+        private final int seatId;
+        private final int number;
+        private final int rowNum;
+        private final boolean isTaken;
+
+        public SeatDto(int seatId, int number, int rowNum, boolean isTaken) {
+            this.seatId = seatId;
+            this.number = number;
+            this.rowNum = rowNum;
+            this.isTaken = isTaken;
+        }
+
+        public int getSeatId() {
+            return seatId;
+        }
+
+        public int getNumber() {
+            return number;
+        }
+
+        public int getRowNum() {
+            return rowNum;
+        }
+
+        public boolean isTaken() {
+            return isTaken;
+        }
+    }
+
     public static class UserLoginDto {
         private final int userId;
         private final String email;
@@ -884,138 +666,6 @@ public class CinemaServerService {
 
         public boolean isSuccess() {
             return errorMessage == null || errorMessage.isBlank();
-        }
-    }
-
-    public List<SeatDto> getSeats(int filmShowId) {
-
-        try {
-
-            String soap = "<?xml version=\"1.0\" encoding=\"utf-8\"?>" +
-                    "<soap:Envelope xmlns:soap=\"http://schemas.xmlsoap.org/soap/envelope/\">" +
-                    "<soap:Body>" +
-                    "<GetSeats xmlns=\"http://tempuri.org/\">" +
-                    "<filmshowId>" + filmShowId + "</filmshowId>" +
-                    "</GetSeats>" +
-                    "</soap:Body>" +
-                    "</soap:Envelope>";
-
-            String xml = sendSoap("GetSeats", soap);
-
-            DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();
-            factory.setNamespaceAware(true);
-
-            Document doc = factory.newDocumentBuilder()
-                    .parse(new ByteArrayInputStream(xml.getBytes("UTF-8")));
-
-            NodeList nodes = doc.getElementsByTagNameNS("*", "SeatDto");
-
-            List<SeatDto> list = new ArrayList<>();
-
-            for (int i = 0; i < nodes.getLength(); i++) {
-
-                Element e = (Element) nodes.item(i);
-
-                int seatId = Integer.parseInt(getValue(e, "SeatId"));
-                int number = Integer.parseInt(getValue(e, "Number"));
-                int row = Integer.parseInt(getValue(e, "RowNum"));
-                boolean taken = Boolean.parseBoolean(getValue(e, "IsTaken"));
-
-                list.add(new SeatDto(seatId, number, row, taken));
-            }
-
-            return list;
-
-        } catch (Exception e) {
-            e.printStackTrace();
-            return new ArrayList<>();
-        }
-    }
-
-    public static class ShowtimeDto {
-        private final int filmShowId;
-        private final String showDatetime;
-        private final int screenId;
-
-        public ShowtimeDto(int filmShowId, String showDatetime, int screenId) {
-            this.filmShowId = filmShowId;
-            this.showDatetime = showDatetime;
-            this.screenId = screenId;
-        }
-
-        public int getFilmShowId() {
-            return filmShowId;
-        }
-
-        public String getShowDatetime() {
-            return showDatetime;
-        }
-
-        public int getScreenId() {
-            return screenId;
-        }
-    }
-
-    public static class SeatDto {
-        private final int seatId;
-        private final int number;
-        private final int rowNum;
-        private final boolean isTaken;
-
-        public SeatDto(int seatId, int number, int rowNum, boolean isTaken) {
-            this.seatId = seatId;
-            this.number = number;
-            this.rowNum = rowNum;
-            this.isTaken = isTaken;
-        }
-
-        public int getSeatId() {
-            return seatId;
-        }
-
-        public int getNumber() {
-            return number;
-        }
-
-        public int getRowNum() {
-            return rowNum;
-        }
-
-        public boolean isTaken() {
-            return isTaken;
-        }
-    }
-
-    public byte[] getReservationPdf(int reservationId) {
-        try {
-            String url = SERVER_URL + "/ReservationToPdf?reservationId=" + reservationId;
-
-            HttpRequest request = HttpRequest.newBuilder()
-                    .uri(URI.create(url))
-                    .GET()
-                    .build();
-
-            HttpResponse<String> response = httpClient.send(
-                    request,
-                    HttpResponse.BodyHandlers.ofString());
-
-            if (response.statusCode() >= 200 && response.statusCode() < 300) {
-
-                String xml = response.body();
-
-                // 🔥 wyciągamy Base64 z XML
-                String base64 = xml
-                        .replaceAll("(?s).*<ReservationToPdfResult>", "")
-                        .replaceAll("</ReservationToPdfResult>.*", "");
-
-                return java.util.Base64.getDecoder().decode(base64);
-            }
-
-            throw new RuntimeException("PDF error: " + response.statusCode());
-
-        } catch (Exception e) {
-            e.printStackTrace();
-            return null;
         }
     }
 }
